# ExampleProvider

./: .env.example  Dockerfile  README.md  README_FR.md  README_HI.md  README_RU.md  README_TR.md  README_UK.md  Settings.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  validate.py
.github/: FUNDING.yml
.github/workflows/: caprover.yml
FastAPI/: Settings.py  __init__.py
FastAPI/Modules/: _guard.py
FastAPI/Routers/API/v1/Libs/: __init__.py  cache_utils.py  ytdlp_service.py
FastAPI/Routers/API/v1/Routers/: __init__.py  extract.py  get_all_plugins.py  get_main_page.py  get_plugin.py  get_plugin_names.py  global_search.py  health.py  load_item.py  load_links.py  schema.py  search.py  ytdlp_extract.py
FastAPI/Routers/Home/Routers/: __init__.py  home.py
FastAPI/Routers/Proxy/Libs/: __init__.py  helpers.py  segment_cache.py
FastAPI/Routers/Proxy/Routers/: __init__.py  subtitle.py  video.py
Stream/: __init__.py
Stream/Extractors/: GenericSampleExtractor.py  NoTorrentExtractor.py
Stream/Plugins/: AniList.py  CanliTV.py  IPTVOrg.py  RareFilmm.py  Stremio.py
