[project]
name            = "ExampleProvider"
version         = "0.1.0"
requires-python = ">=3.11"
dependencies    = [
    "Kekik",
    "httpx[http2]",
    "fastapi",
    "uvicorn",
    "uvloop; sys_platform != 'win32'",
    "httptools",
    "gunicorn",
    "PyYAML",
    "python-multipart",
    "python-dotenv",
    "KekikStream>=3.1.0",
    "yt-dlp[default,curl-cffi]",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
