[project]
name         = "ExampleProvider"
version      = "0.1.0"
dependencies = [
    "Kekik",
    "httpx[http2]",
    "fastapi",
    "uvicorn",
    "uvloop; sys_platform != 'win32'",
    "httptools",
    "gunicorn",
    "PyYAML",
    "python-multipart",
    "python-dotenv",
    "KekikStream>=3.1.4",
    "yt-dlp[default,curl-cffi]",
]

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
